--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,9 +32,12 @@
       <a class="navbar-brand" href="/">404AnswerNotFound</a>
         <form action="/search" class="form-inline" method="GET">
           <input class="form-control mr-sm-2" type="search" placeholder="Search questions" aria-label="Search">
+          <!-- TODO: Add Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> to footer -->
           <input id="search_glass" type="image" src="/images/search.png" alt="Eye" formmethod="GET" formaction="/search">
         </form>
-        <!-- TODO: Add Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> to footer -->
+        <object id="profile_blank" type="image/svg+xml" data="/images/detectiveprofile.svg">
+          Your browser doesn't support SVG. Get a better browser.
+        </object>
     </nav>
   </header>
   <%- body %>
