--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!--Local Stylesheets-->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!--Scripts-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -31,8 +31,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="/">404AnswerNotFound</a>
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a href="/">Home</a></li>
-        <li class="nav-item"><a href="/questions">Questions</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/questions">Questions</a>
+        </li>
       </ul>
         <form action="/search" class="form-inline" method="GET">
           <input class="form-control mr-sm-2" type="search" placeholder="Search questions" aria-label="Search">
