--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,19 +16,24 @@
 	width: 650px;
 }
 
+#profile_blank {
+	background-color: white;
+	height: 75%;
+	width: 75%;
+}
 #search_glass {
 	height: 20px;
 	width: 20px;
 }
-
 #profile_bubble {
 	position: absolute;
 	right: 125px;
 	width: 70px;
 }
-
-#profile_blank {
-	background-color: white;
-	height: 75%;
-	width: 75%;
+#new-email, #new-user, #new-password{
+	padding:25px;
+	margin: 25px;
+} 
+.btn-primary{
+	background-color:#343a40;
 }
