--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,3 +1,4 @@
+<!-- 
 <form action="/auth/signup" method="POST">
   <label for="new-email">Email</label>
   <input id="new-email" type="email" name="email">
@@ -9,4 +10,22 @@
   <input id="new-password" type="password" name="password">
 
   <input type="submit" value="Sign up">
+</form> -->
+
+<form action="/auth/signup" method="POST">
+  <div class="form-group">
+    <label for="new-email">Email address</label>
+    <input type="email" class="form-control" id="new-email">
+  </div>
+  <div class="form-group">
+    <label for="new-name">Username</label>
+    <input type="text" class="form-control" id="new-username">
+  </div>
+  <div class="form-group">
+    <label for="new-password">Password</label>
+    <input type="password" class="form-control" id="new-password" >
+  </div>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
