--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,13 @@
 
 .navbar .form-inline {
 	position: absolute;
-	right:15%;
+	right: 15%;
 }
 
 .navbar .form-inline .form-control {
-	height: 50px;
+	height: 40px;
 	width: 650px;
+	border: 2px solid transparent;
 }
 
 #search_glass {
@@ -31,4 +32,8 @@
 	background-color: white;
 	height: 75%;
 	width: 75%;
+}
+
+.nav-item {
+	margin: 5px;
 }
