--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,9 +1,22 @@
-<form action="/auth/login" method="POST">
-  <label for="auth-email">Email</label>
-  <input id="auth-email" type="email" name="email">
-
-  <label for="auth-password">Password</label>
-  <input id="auth-password" type="password" name="password">
-
-  <input type="submit" value="Log In">
-</form>
+<!-- 
+  1.adding bootstrap form for the login fields
+  2.adding flex container
+-->
+<!-- style sheet for the login page for individual styling -->
+<link rel="stylesheet" href="/css/styleLogin.css">
+<!-- Forms needed for login -->
+<div class="container">
+  <form class="form" action="/auth/login" method="POST">
+    <div class="form-group">
+      <label id="login" for="auth-email">Login</label>
+      <input class="form-control" aria-describedby="emailHelp" id="auth-email" type="email" name="email"
+        placeholder="email or user name" required>
+      <small id="emailHelp" class="form-text text-muted">Privacy is our number one priority!</small>
+    </div>
+    <div class="form-group">
+      <label id="login" for="auth-password">Password</label>
+      <input type="password" class="form-control" id="auth-password" name="password" required>
+    </div>
+    <button type="submit" class="btn btn-outline-dark">Login</button>
+  </form>
+</div>
