--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,13 +22,19 @@
 }
 
 #profile_bubble {
+	background-color: white;
 	position: absolute;
 	right: 125px;
-	width: 70px;
+	width: 25px;
+	height: 25px;
 }
 
 #profile_blank {
-	background-color: white;
-	height: 75%;
-	width: 75%;
+	width: 25px;
+}
+
+#drop {
+	position: absolute;
+	bottom: -6px;
+	right: -27px;
 }
