--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,17 +24,26 @@
 #profile_bubble {
 	background-color: white;
 	position: absolute;
-	right: 125px;
-	width: 25px;
-	height: 25px;
+	right: 175px;
+	width: 24px;
+	height: 24px;
 }
 
 #profile_blank {
-	width: 25px;
+	width: 26px;
 }
 
 #drop {
 	position: absolute;
-	bottom: -6px;
-	right: -27px;
+	bottom: -8px;
+	right: -25.3px;
+}
+
+#user_menu {
+	width: 63px;
+}
+
+.dropdown-menu {
+	font-size: 12px;
+	text-align: center;
 }
