--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,8 @@
      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!--Local Stylesheets-->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="<%- meta.style %>">
 
   <!--Scripts-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
