--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -11,12 +11,12 @@
       <label id="login" for="auth-email">Login</label>
       <input class="form-control" aria-describedby="emailHelp" id="auth-email" type="email" name="email"
         placeholder="email or user name" required>
-      <small id="emailHelp" class="form-text text-muted">Privacy is our number one priority!</small>
+      <small id="emailHelp" class="form-text text-muted"></small>
     </div>
     <div class="form-group">
       <label id="login" for="auth-password">Password</label>
       <input type="password" class="form-control" id="auth-password" name="password" required>
     </div>
-    <button type="submit" class="btn btn-outline-dark">Login</button>
+    <button type="submit" class="btn btn-dark">Login</button>
   </form>
 </div>
