--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -1,9 +1,18 @@
 /* styling for the login views */
+body {
+	background-color: #818181;
+}
 .container {
 	display: flex;
+	width: 50%;
 	justify-content: center;
-	margin-top: 200px;
+	border: 3px solid #ffffff;
+	padding: 50px;
+	margin-top: 250px;
 }
 .form-group input {
-	width: 200%;
+	width: 100%;
+}
+#login {
+	color: whitesmoke;
 }
