--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,12 @@
 <div class="container-fluid">
-	<header>
-		<img src="" alt="Cover">
-		<h1>404AnswerNotFound</h1>
-	</header>
+	<div class="container" id="content_holder">
+		<form id="qQuestion" action="/ask" method="post">
+			<div class="form-group">
+				<label for="content"> Quick Question:</label>
+				<textarea type="text" class="form-control" id="content" aria-describedby="content_help"></textarea>
+				<small id="contentHelp" class="form-text text-muted">View our <a href="#">guidelines</a> to make a quality question.</small>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</div>
+		</form>
+	</div>
 </div>
