--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -11,7 +11,7 @@
 
   <input type="submit" value="Sign up">
 </form> -->
-<h1 class=signup-title>Create a new account</h1>
+<h1 class="signup-title">Create a new account</h1>
 <div class= "signup-form">
   <form action="/auth/signup" method="POST">
     
