placed a register button next to the login button on login page

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,6 +17,7 @@
       <label id="login" for="auth-password">Password</label>
       <input type="password" class="form-control" id="auth-password" name="password" required>
     </div>
-    <button type="submit" class="btn btn-dark">Login</button>
+    <button type="submit" class="btn btn-dark" value=" ">Login</button>
+    <button type="submit" class="btn btn-dark"><a id="registerbtn" href="/auth/signup">Register</a></button>
   </form>
 </div>
