Added some more stuff to inquisition.

--- a/views/inquire/inquisition.ejs
+++ b/views/inquire/inquisition.ejs
@@ -9,6 +9,7 @@
 				</div>
 				<div id="content_field">
 					<label for="details">Details:</label>
+					<textarea name="details" id="details" cols="30" rows="10" placeholder="Details go here."></textarea>
 				</div>
 			</div>
 		</section>
