--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,5 @@
 <div class="container-fluid">
 	<div class="container" id="content_holder">
-		<main>
 			<section>
 				<form id="qQuestion" action="/ask" method="post">
 					<div class="form-group">
@@ -14,6 +13,16 @@
 				</form>
 			</section>
 			<hr>
+			<section id="categories">
+				<div class="btn-group">
+					<button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+					categories
+					</button>
+					<div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
+					<button class="dropdown-item" type="button">Example</button>
+					</div>
+				</div>
+			</section>
 			<section id="recent_questions">
 				<header>
 					<h3>Recent Questions</h3>
@@ -30,6 +39,7 @@
 					<!-- Loop through the recent five answers -->
 				</article>
 			</section>
+			</hr>
 		</main>
 	</div>
 </div>
