Added a preview section to inquisition.

--- a/views/inquire/inquisition.ejs
+++ b/views/inquire/inquisition.ejs
@@ -22,6 +22,16 @@
 					</div>
 				</form>
 			</section>
+			<section id="preview">
+				<div class="container">
+					<header>
+						<h5>Question preview</h5>
+					</header>
+					<article>
+						<!-- Preview of formatted question goes here. -->
+					</article>
+				</div>
+			</section>
 			<hr>
 			<section id="similar_questions">
 				<header>
