--- a/public/css/global.css
+++ b/public/css/global.css
@@ -31,12 +31,10 @@
 #profile_bubble {
 	background-color: white;
 	position: absolute;
-	right: 175px;
+	right: 230px;
 	width: 24px;
 	height: 24px;
 }
-<<<<<<< HEAD:public/css/style.css
-=======
 
 #profile_blank {
 	width: 26px;
@@ -56,4 +54,8 @@
 	font-size: 12px;
 	text-align: center;
 }
->>>>>>> submaster:public/css/global.css
+
+#spanish_inquisition {
+	height: 30px;
+	line-height: 0.5;
+}
