--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -64,6 +64,7 @@
               </div>
             </div>
           </div>
+          <button class="btn btn-secondary" id="spanish_inquisition">Make an Inquisition</button>
         </div>
       </nav>
     </header>
