--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,17 +13,7 @@
 				</form>
 			</section>
 			<hr>
-			<section id="categories">
-				<div class="btn-group">
-					<button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-					categories
-					</button>
-					<div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-					<button class="dropdown-item" type="button">Example</button>
-					</div>
-				</div>
-			</section>
-			<section id="recent_questions">
+			<section id="recent_questions" class="rounded">
 				<header>
 					<h3>Recent Questions</h3>
 				</header>
@@ -31,7 +21,7 @@
 					<!-- Loop through the recent five posts -->
 				</article>
 			</section>
-			<section id="recent_answers">
+			<section id="recent_answers" class="rounded">
 				<header>
 					<h3>Recent Answers</h3>
 				</header>
