--- a/views/partials/categories.ejs
+++ b/views/partials/categories.ejs
@@ -1,7 +1,18 @@
-<div class="categories-menu">
-    <h6 class="dropdown-header">Categories:</h6>
-<!--     
-        <% for(let i= 0; i < models.categories[i].length;i++){ %>
-            <a class="dropdown-item" href="#"> <%=models.categories[i]%> </a>        
-        <% } %>  -->
-</div>
+<section id="categories">
+    <table class="table table-hover table-dark">
+        <thead>
+        <tr>
+            <th scope="col">Categories</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <!-- Should populate more rows based off categories db -->
+            <td>Example 1</td>
+        </tr>
+        <tr>
+            <td>Example 2</td>
+        </tr>
+        </tbody>
+    </table>
+</section>	
