--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -4,24 +4,24 @@
     
     <div class="form-group1">
       <label for="new-firstName">First Name</label>
-      <input type="text" class="form-control" id="new-firstName" required>
+      <input type="text" class="form-control" id="new-firstName" name="firstName" required>
     </div>
     <div class="form-group1">
       <label for="new-lastName">Last Name</label>
-      <input type="text" class="form-control" id="new-lastName" required>
+      <input type="text" class="form-control" id="new-lastName" name="lastName" required>
     </div>
     <div class="form-group-newEmail">
       <label for="new-email">Email address</label>
-      <input type="email" class="form-control" id="new-email" required>
+      <input type="email" class="form-control" id="new-email" name="email" required>
     </div>
     <div class="form-group-newUsername">
       <label for="new-userName">Username</label>
-      <input type="text" class="form-control" id="new-username" required>
+      <input type="text" class="form-control" id="new-username" name="username" required>
     </div>
 
     <div class="form-group3-newPassword">
       <label for="new-password">Password</label>
-      <input type="password" class="form-control" id="new-password" required>
+      <input type="password" class="form-control" id="new-password" name="password" required>
     </div>
 
     <div class="password-req">
