--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,6 +49,7 @@
 					<!-- Loop through the recent five answers -->
 				</article>
 			</section>
+			<%- include ('partials/categories') %>
 			</hr>
 		</main>
 	</div>
