--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,11 +1,12 @@
 
-.signup-title{
+.signup-title {
+	text-align: center;
 	display: block;
     margin-left: 25%;
 	margin-right: 25%;
 	margin-top: 50px;
 }
-.signup-form{
+.signup-form {
     padding: 5px;
     margin-left: 25%;
 	margin-right: 25%;
@@ -13,15 +14,35 @@
     width: 800px;
 }  
 
-.form-group1{
+.form-group {
 	display: inline-block;
 	width: 48%;
     padding: 20px 25px 20px 0px; 
 }
 
-.btn-primary{
+.btn-primary {
 	position: relative;
 	top: 55%;
 	left: 25%;
 	background-color:#343a40;
+}
+
+.password {
+	display: flex;
+	height: 100px;
+	width: 100%;
+}
+
+#password {
+	width: 300px;
+}
+
+#password_conf {
+	display: block;
+	width: 300px;
+}
+
+#pass_conf {
+	margin-left: 90px;
+	width: 300px;
 }
