--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,16 +18,23 @@
 						<button type="submit" class="btn btn-dark" value=" ">Login</button>
 					</div>
 				</form>
-				<button type="submit" class="btn btn-dark" id="registerbtn"><a href="/auth/signup">Register</a></button>
+				<button type="submit" class="btn btn-dark" id="registerBtn"><a href="/auth/signup">Register</a></button>
 			</div>
 			<hr>
 			<section id="recent_questions" class="rounded">
 				<header>
 					<h3>Recent Questions</h3>
 				</header>
-				<article>
-					<!-- Loop through the recent five posts -->
-				</article>
+				<% for (let i = 0; i < questions.length; i++) { %>
+					<article id="<%= questions[i].createdBy %>_question" class="inquisition">
+						<header class="inquest_author"><%= questions[i].createdBy %> asked <%= questions[i].lastModifiedDate.toLocaleString() %></header>
+						<small class="inquest">
+							<%= questions[i].summary %><br />
+							<%= questions[i].content.slice(0, 300) %> ...
+						</small>
+						<hr>
+					</article>
+				<% } %> 
 			</section>
 			<section id="recent_answers" class="rounded">
 				<header>
