--- a/public/css/global.css
+++ b/public/css/global.css
@@ -17,6 +17,16 @@
 	border: 2px solid transparent;
 }
 
+#categories{
+	display: flex;
+	flex-direction: column;
+	width: 250px;
+	margin-right: 30px;
+	position: absolute;
+	top: 8%;
+	right: 0;
+}
+
 #profile_blank {
 	background-color: white;
 	height: 75%;
