Some more stuff.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 						<button type="submit" class="btn btn-dark" value=" ">Login</button>
 					</div>
 				</form>
-				<button type="submit" class="btn btn-dark" id="registerBtn"><a href="/auth/signup">Register</a></button>
+				<button type="submit" class="btn btn-dark" id="registerBtn">Register</button>
 			</div>
 			<hr>
 			<section id="recent_questions" class="rounded">
