Adjusted stylings, rearranged stylesheets

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,14 +4,49 @@ body {
 	background-color: #8D98A7;
 	color: antiquewhite;
 }
+hr {
+	background-color: #8D98A7;
+}
+
+main {
+	width: auto;
+}
 
 #content_holder {
 	display: inline-block;
-	width: 1115px;
-	height: 500px;
-	padding-left: 228px;
+	width: 1100px;
+	height: auto;
+	margin-left: 300px;
 }
 
+#finalize {
+	height: 32px;
+	width: 80px;
+	line-height: 0.5;
+	margin-left: 20px;
+	position: absolute;
+	top: 4px;
+	right: 0;
+}
+
+#quick {
+	display: flex;
+	flex-direction: row;
+	width: 750px;
+	position: relative;
+}
+
+#quick_post {
+	margin-left: 20px;
+	width: 537px;
+}
+
+#quick_post_label {
+	width: 100px;
+	position: relative;
+	top: 7px;
+	left: 25px;
+}
 
 #recent_questions {
 	background-color: #343a40;
@@ -24,10 +59,10 @@ body {
 	width: 250px;
 }
 #recent_answers {
-	height: 200px;
-	margin-top: 40px;
-	margin-bottom: 40px;
 	background-color: #343a40;
+    height: 500px;
+	margin-top: 20px;
+	padding: 20px;
 }
 
 #qQuestion {
@@ -46,15 +81,25 @@ body {
 #password {
 	width: 200px;
 }
-#password_label {
-	margin-left: 10px;
-}
+
 #user_container,
 #pass_container {
 	display: inline-block;
 }
+
+#pass_container {
+	margin-left: 5px;
+}
+
+#homeLogin {
+	display: flex;
+}
+
 #registerBtn {
-	display: inline;
+	height: 38px;
+	position: relative;
+	top: 33px;
+	margin-left: 10px;
 }
 
 .container {
@@ -64,6 +109,6 @@ body {
 	margin-left: auto;
 }
 
-.inquest_author {
+.author {
 	width: 100% !important;
 }
