--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,10 +1,3 @@
-<!-- 
-  1.adding bootstrap form for the login fields
-  2.adding flex container
--->
-<!-- style sheet for the login page for individual styling -->
-<link rel="stylesheet" href="/css/styleLogin.css">
-<!-- Forms needed for login -->
 <div class="container">
   <form class="form" action="/auth/login" method="POST">
     <div class="form-group">
@@ -19,5 +12,5 @@
     </div>
     <button type="submit" class="btn btn-dark" value=" ">Login</button>
   </form>
-  <button type="submit" class="btn btn-dark"><a id="registerbtn" href="/auth/signup">Register</a></button>
+  <button id="registerBtn2" type="submit" class="btn btn-dark">Register</button>
 </div>
