Can now read the posts on Home.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 						<header class="author"><%= questions[i].createdBy %> asked <%= questions[i].lastModifiedDate.toLocaleString() %></header>
 						<small class="inquest">
 							<%= questions[i].summary %><br />
-							<%= questions[i].content.slice(0, 300) %> ...
+							<%= questions[i].content.slice(0, 300) %> ... <a href="/inquire/inquiry/<%= answers[i].id %> ">Read More</a>
 						</small>
 						<hr>
 					</article>
@@ -31,7 +31,7 @@
 						<header class="author"><%= answers[i].createdBy %> asked <%= answers[i].lastModifiedDate.toLocaleString() %></header>
 						<small class="inquest">
 							<%= answers[i].summary %><br />
-							<%= answers[i].content.slice(0, 300) %> ...
+							<%= answers[i].content.slice(0, 300) %> ... <a href="/inquire/inquiry/<%= answers[i].QID %>">Read More</a>
 						</small>
 						<hr>
 					</article>
