--- a/views/partials/categories.ejs
+++ b/views/partials/categories.ejs
@@ -1,18 +1,16 @@
 <section id="categories">
-    <table class="table table-hover table-dark">
+    <table class="table table-hover table-dark rounded">
         <thead>
         <tr>
             <th scope="col">Categories</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <!-- Should populate more rows based off categories db -->
-            <td>Example 1</td>
-        </tr>
-        <tr>
-            <td>Example 2</td>
-        </tr>
+        <tbody id="cats">
+            <% cat.forEach( el => { %>
+                <tr>
+                    <td><%= el.dataValues.category %></td>
+                </tr>
+            <% }) %> 
         </tbody>
     </table>
 </section>	
