--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,5 +1,5 @@
 <div class="container" id="homeLogin">
-	<form class="form" action="/auth/login" method="GET">
+	<form class="form" action="/auth/login" method="POST">
 		<div class="form-group">
 			<div id="user_container">
 				<label id="user_label" for="username" class="loginlabel">Login</label>
