--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,9 +26,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  
-  <!-- Local Scripts -->
-  <script src="/js/main.js" defer></script>
 </head>
 
 <body>
@@ -36,7 +33,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">404AnswerNotFound</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapser" aria-controls="collapser" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapser"
+          aria-controls="collapser" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapser">
@@ -45,7 +43,7 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions">Questions</a>
+              <a class="nav-link" href="/inquire/inquiries">Inquiries</a>
             </li>
           </ul>
           <form action="/search" class="form-inline" method="GET">
@@ -64,11 +62,12 @@
               </div>
             </div>
           </div>
-          <button class="btn btn-secondary" id="spanish_inquisition">Make an Inquisition</button>
+          <a name="spanishInquisition" id="spanish_inquisition" class="btn btn-primary"
+            href="/inquire/create/inquisition" role="button">Make an Inquisition</a>
         </div>
       </nav>
     </header>
   </div>
-    <%- body %>
+  <%- body %>
 </body>
 </html>
