--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 	<div class="container" id="content_holder">
 		<main>
 			<% if (!meta.isLoggedIn) { %>
-				<%- include('partials/login.ejs') %>
+				<%- include('partials/homeLogin.ejs') %>
 			<% } else { %>
 				<%- include('partials/quickPost.ejs') %>
 			<% } %>
