--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 	<div class="container" id="content_holder">
 		<main>
 			<% if (!meta.isLoggedIn) { %>
-				<%- include('partials/login.ejs') %>
+			<%- include('partials/login.ejs') %>
 			<% } else { %>
-				<%- include('partials/quickPost.ejs') %>
+			<%- include('partials/quickPost.ejs') %>
 			<% } %>
 			<hr>
 			<section id="recent_questions" class="rounded">
@@ -12,30 +12,33 @@
 					<h3>Recent Questions</h3>
 				</header>
 				<% for (let i = 0; i < questions.length; i++) { %>
-					<article id="<%= questions[i].createdBy %>_question" class="recent_inquisition">
-						<header class="author"><%= questions[i].createdBy %> asked <%= questions[i].lastModifiedDate.toLocaleString() %></header>
-						<small class="inquest">
-							<%= questions[i].summary %><br />
-							<%= questions[i].content.slice(0, 300) %> ... <a href="/inquire/inquiry/<%= answers[i].id %> ">Read More</a>
-						</small>
-						<hr>
-					</article>
-				<% } %> 
+				<article id="<%= questions[i].createdBy %>_question" class="recent_inquisition">
+					<header class="author"><%= questions[i].createdBy %> asked <%= questions[i].lastModifiedDate %>
+					</header>
+					<small class="inquest">
+						<%= questions[i].summary %><br />
+						<%= questions[i].content %> ... <a href="/inquire/inquiry/<%= questions[i].id %> ">Read More</a>
+					</small>
+					<hr>
+				</article>
+				<% } %>
 			</section>
 			<section id="recent_answers" class="rounded">
 				<header>
 					<h3>Recent Answers</h3>
 				</header>
 				<% for (let i = 0; i < answers.length; i++) { %>
-					<article id="<%= answers[i].createdBy %>_answer" class="recent_answers">
-						<header class="author"><%= answers[i].createdBy %> asked <%= answers[i].lastModifiedDate.toLocaleString() %></header>
-						<small class="inquest">
-							<%= answers[i].summary %><br />
-							<%= answers[i].content.slice(0, 300) %> ... <a href="/inquire/inquiry/<%= answers[i].QID %>">Read More</a>
-						</small>
-						<hr>
-					</article>
-				<% } %> 
+				<article id="<%= answers[i].createdBy %>_answer" class="recent_answers">
+					<header class="author"><%= answers[i].createdBy %> asked
+						<%= answers[i].lastModifiedDate.toLocaleString() %></header>
+					<small class="inquest">
+						<%= answers[i].summary %><br />
+						<%= answers[i].content.slice(0, 300) %> ... <a
+							href="/inquire/inquiry/<%= answers[i].QID %>">Read More</a>
+					</small>
+					<hr>
+				</article>
+				<% } %>
 			</section>
 			<%- include ('partials/categories') %>
 			</hr>
