--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,7 +46,7 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/questions">Questions</a>
+              <a class="nav-link" href="/inquisition">Inquisition</a>
             </li>
           </ul>
           <form action="/search" class="form-inline" method="GET">
@@ -65,7 +65,10 @@
               </div>
             </div>
           </div>
-          <button class="btn btn-secondary" id="spanish_inquisition">Make an Inquisition</button>
+          <a href="inquire/create/inquisition">test</a>
+          <form action="inquire/create/inquisition" method="POST">
+            <button class="btn btn-secondary submit" id="">Make an Inquisition</button>
+          </form>
         </div>
       </nav>
     </header>
