added a name attribute with username value

--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -4,8 +4,8 @@
 			<div id="user_container">
 				<label id="user_label" for="username" class="loginlabel">Login</label>
 				<!-- user login  -->
-				<input class="form-control" id="username" type="text" name="username"
-					placeholder="email or user name" required>
+				<input class="form-control" id="username" type="text" name="username" placeholder="email or user name"
+					required>
 			</div>
 			<div id="pass_container">
 				<label id="password_label" for="password" class="loginLabel">Password</label>
