--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 				</header>
 				<% for (let i = 0; i < questions.length; i++) { %>
 					<article id="<%= questions[i].createdBy %>_question" class="recent_inquisition">
-						<header class="author"><%= questions[i].createdBy %> asked <%= questions[i].lastModifiedDate.toLocaleString() %></header>
+						<header class="author"><%= questions[i].createdBy %> asked <time><%= questions[i].lastModifiedDate.toLocaleString() %></time></header>
 						<small class="inquest">
 							<%= questions[i].summary %><br />
 							<%= questions[i].content.slice(0, 300) %> ... <a href="/inquire/inquiry/<%= answers[i].id %> ">Read More</a>
