--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,7 +1,7 @@
 <h1 class="signup-title">Create a new account</h1>
-<div class= "signup-form">
+<div class="signup-form">
   <form action="/auth/signup" method="POST">
-    
+
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input type="text" class="form-control" id="firstName" name="firstName" required>
@@ -23,6 +23,8 @@
       <div id="pass">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" name="password" required>
+        <label for="password_conf">Confirm Password</label>
+        <input type="password" class="form-control" id="password_conf" name="password_conf" required>
       </div>
       <div id="pass_conf">
         <label for="password_conf">Confirm Password</label>
@@ -36,11 +38,11 @@
         <ul>
           <li>Must be 15 to 99 alphanumeric characters.</li>
           <li>Must contain at least one uppercase character.</li>
-        </ul>  
+        </ul>
       </h6>
-    </div>  
-      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
+</div>
+</div>
+<button type="submit" class="btn btn-primary">Register</button>
+</form>
 </div>
