the inquisition tab was modified

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,7 +46,8 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/inquisition">Inquisition</a>
+              <a class="nav-link" href="inquire/create/inquisition">Inquisition</a>
+              <!-- <a class="nav-link" href="/inquire/inquiry">Inquisition</a> -->
             </li>
           </ul>
           <form action="/search" class="form-inline" method="GET">
@@ -65,9 +66,9 @@
               </div>
             </div>
           </div>
-          <a href="inquire/create/inquisition">test</a>
           <form action="inquire/create/inquisition" method="POST">
-            <button class="btn btn-secondary submit" id="">Make an Inquisition</button>
+            <a href="inquire/create/inquisition" class="btn btn-secondary" role="button">Make an
+              Inquisition</a>
           </form>
         </div>
       </nav>
