--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -15,5 +15,5 @@
 			<button id="loginBtn" type="submit" class="btn btn-dark">Login</button>
 		</div>
 	</form>
-	<button type="submit" class="btn btn-dark" id="registerBtn">Register</button>
+	<a class="btn btn-dark" type="submit" href="/auth/signup" role="button" id="registerBtn">Register</a>
 </div>
